<resources>
    <string name="app_name">Cronos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="volver">Volver</string>
    <string name="clase">Clase:</string>
    <string name="m01_uf1_a_8_00_h_l_j">M01 - UF1 - A - 8:00 h - (L - J)</string>
    <string name="alumno">Alumno</string>
    <string name="presente">Presente</string>
    <string name="retraso">Retraso</string>
    <string name="falta">Falta</string>
    <string name="f_justi">F. justi</string>
    <string name="miguel_vera">Miguel Vera</string>
    <string name="pau_pich">Pau Pich</string>
    <string name="guardar">Guardar</string>
    <string name="mis_clases">Mis Clases</string>
    <string name="mis_listas_pasadas">Mis listas pasadas</string>
    <string name="eliminar">Eliminar</string>
    <string name="m01_uf1_a_8_00_h_l_j_">M01 - UF1 - A - 8:00 h - (L - J)</string>
    <string name="editar">Editar</string>
    <string name="pasar_lista">Pasar lista</string>
    <string name="m01_uf1_b_10_00_h_l_j">M01 - UF1 - B - 10:00 h - (L - J)</string>
    <string name="m03_uf1_a_8_00_h_ma_mi">M03 - UF1 - A - 8:00 h - (Ma - Mi)</string>
    <string name="estado">Estado</string>
    <string name="_100_asistencia">100% asistencia</string>
    <string name="linea">------------------------------------------------------------------------------</string>
    <string name="mi_asitencia_de_hoy">Mi asitencia de hoy</string>
    <string name="dia_27_de_noviembre_2024">Dia:27 de noviembre 2024</string>
    <string name="hora_09_15_45">Hora: 09:15:45</string>
    <string name="clase_programaci_n">Clase: Programación</string>
    <string name="dia_27_de_noviembre_2024_">Dia:27 de noviembre 2024</string>
    <string name="hora_09_15_45_">Hora: 09:15:45</string>
    <string name="clase_programaci_nn">Clase: Programación</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="buzon_vacio">Buzon vacio</string>
    <string name="estadop">Estado</string>
    <string name="ficho_correctamente">Ficho correctamente</string>
    <string name="line">------------------------------------------------------------------------------</string>
    <string name="mis_fichajes_de_hoy">Mis fichajes de hoy</string>
    <string name="dia_27_de_noviembre_2024__">Dia:27 de noviembre 2024</string>
    <string name="hora_09_15_455">Hora: 09:15:45</string>
    <string name="dia_27_de_noviembre_20244">Dia:27 de noviembre 2024</string>
    <string name="hora_09_15_456">Hora: 09:15:45</string>
    <string name="line2">------------------------------------------------------------------------------</string>
    <string name="notificacionesp">Notificaciones</string>
    <string name="buzon_vaciop">Buzon vacio</string>
    <string name="line3">------------------------------------------------------------------------------</string>
    <string name="tutorias_programadas">Tutorias programadas</string>
    <string name="miercoles_4_diciembre_2024_16_00_00">Miercoles 4 diciembre 2024, 16:00:00</string>
    <string name="cronos">CRONOS</string>
    <string name="id_instituto">ID instituto</string>
    <string name="introduzca_id">Introduzca id</string>
    <string name="usuario">Usuario</string>
    <string name="introduzca_usuario">Introduzca usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="introduzca_contrase_a">Introduzca contraseña</string>
    <string name="idioma">Idioma</string>
    <string name="acceder">Acceder</string>
    <string name="he_olvidado_la_contrase_a">He olvidado la contraseña</string>
    <string name="iniciar_sesi_n_con_correo_institucional">Iniciar sesión con correo institucional</string>
    <string name="perfil">Perfil</string>
    <string name="nombre">Nombre:</string>
    <string name="luis_duarte">Luis Duarte</string>
    <string name="correo">Correo:</string>
    <string name="luis_duarte_escuela_com">luis_duarte@escuela.com</string>
    <string name="grado_grupo">Grado - Grupo:</string>
    <string name="dam_a">DAM - A</string>
    <string name="identificador">Identificador:</string>
    <string name="_00001">00001</string>
    <string name="rol">Rol:</string>
    <string name="cambiar_foto">Cambiar foto</string>
    <string name="salir">Salir</string>
    <string name="modificar">Modificar</string>
    <string name="preferencias">Preferencias</string>
    <string name="tema_oscuro">Tema oscuro</string>
    <string name="tama_o_de_letra">Tamaño de letra</string>
    <string name="a">A</string>
    <string name="resumen_de_asistencia">Resumen de asistencia</string>
    <string name="line5">------------------------------------------------------------------------------</string>
    <string name="asignaturas">Asignaturas</string>
    <string name="m01">M01</string>
    <string name="m02">M02</string>
    <string name="m03">M03</string>
    <string name="asistencia">Asistencia</string>
    <string name="total">Total</string>
    <string name="detalles">Detalles</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="alumno_luis">Alumno: Luis</string>
    <string name="ultimo_acceso_27_noviembre_2024_15_30_00">Ultimo acceso: 27 noviembre 2024, 15:30:00</string>
    <string name="profesor_david">Profesor: David</string>
    <string name="ultimo_acceso_27_noviembre_2024_15_30_00_">Ultimo acceso: 27 noviembre 2024, 15:30:00</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>


    <string-array name="language_options">
        <item>Español</item>
        <item>Inglés</item>
        <item>Francés</item>
        <item>Catalán</item>
    </string-array>

    <string-array name="time_options">
        <item>Últimos 7 días</item>
        <item>Hace una semana</item>
        <item>Hace un mes</item>
        <item>Rango personalizado</item>
    </string-array>
</resources>